/*
 * Copyright (C) 2019  Lightbend
 *
 * This file is part of ModelServing-tutorial
 *
 * ModelServing-tutorial is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */


syntax = "proto3";

option java_package = "com.lightbend.model";


// Description of the trained model.
message ModelDescriptor {
    // Model name
    string name = 1;
    // Human readable description.
    string description = 2;
    // Data type for which this model is applied.
    string dataType = 3;
    // Model type
    // Could add PFA, ONNX, â€¦
    enum ModelType {
        TENSORFLOW  = 0;
        TENSORFLOWSAVED  = 1;
        PMML = 2;
    };
    ModelType modeltype = 4;
    oneof MessageContent {
        // Byte array containing the model
        bytes data = 5;
        string location = 6;
    }
}
