/*
 * Copyright (C) 2019  Lightbend
 *
 * This file is part of ModelServing-tutorial
 *
 * ModelServing-tutorial is free software: you can redistribute it and/or modify
 * it under the terms of the Apache License Version 2.0.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

option java_package = "com.lightbend.model";

// Description of the wine.
message WineRecord {
    double fixed_acidity = 1;
    double volatile_acidity = 2;
    double citric_acid = 3;
    double residual_sugar = 4;
    double chlorides = 5;
    double free_sulfur_dioxide = 6;
    double total_sulfur_dioxide = 7;
    double density = 8;
    double pH = 9;
    double sulphates = 10;
    double alcohol = 11;
    // Data type for this record
    string dataType = 12;
    // Time of sending record
    int64 ts = 13;
}
